fixed portfolio image overflow

--- a/public/styles/desktop-style.css
+++ b/public/styles/desktop-style.css
@@ -747,6 +747,7 @@ body {
         width: 100%;
         justify-self: center;
         max-height: 33Vh;
+        overflow: hidden;
     }
 }
 
